Corregido bug en buscar con respaldo. Devolvía una lista vacía en lugar de los resultados de la búsqueda en el caso de buscar en el propio servidor. Realizados test usando mocks. Completados los test para alcanzar un mayor nivel de cobertura

--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,34 @@
       <groupId>junit</groupId>
 	  <artifactId>junit</artifactId>
 	  <version>4.5</version>
+	  <scope>test</scope>
     </dependency>
     <dependency>
 	  <groupId>org.javatuples</groupId>
 	  <artifactId>javatuples</artifactId>
 	  <version>1.2</version>
 	</dependency>
+	<dependency>
+		<groupId>org.mockito</groupId>
+		<artifactId>mockito-all</artifactId>
+		<version>1.9.5</version>
+	</dependency>
   </dependencies>
+  <build>
+  	<plugins>
+  		<plugin>
+		    <groupId>org.pitest</groupId>
+        	<artifactId>pitest-maven</artifactId>
+        	<version>1.1.2</version>
+		    <configuration>
+		        <targetClasses>
+		            <param>es.udc.fic.vvs*</param>
+		        </targetClasses>
+		        <targetTests>
+		            <param>es.udc.fic.vvs*</param>
+		        </targetTests>
+		    </configuration>
+		</plugin>
+  	</plugins>
+  </build>
 </project>
