--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
 		<artifactId>mockito-all</artifactId>
 		<version>1.9.5</version>
 	</dependency>
+	<dependency>
+	    <groupId>net.java.quickcheck</groupId>
+	    <artifactId>quickcheck</artifactId>
+	    <version>0.6</version>
+	    <scope>test</scope>
+	</dependency>	
   </dependencies>
   <build>
   	<plugins>
