--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <dependency>
       <groupId>junit</groupId>
 	  <artifactId>junit</artifactId>
-	  <version>4.5</version>
+	  <version>4.6</version>
 	  <scope>test</scope>
     </dependency>
     <dependency>
@@ -30,6 +30,11 @@
 	    <version>0.6</version>
 	    <scope>test</scope>
 	</dependency>	
+  	<dependency>
+		<groupId>fm.void.jetm</groupId>
+		<artifactId>jetm</artifactId>
+		<version>1.2.3</version>
+	</dependency>
   </dependencies>
   <build>
   	<plugins>
@@ -46,6 +51,20 @@
 		        </targetTests>
 		    </configuration>
 		</plugin>
+		<plugin>
+			<groupId>org.pitest</groupId>
+			<artifactId>pitest-maven</artifactId>
+			<version>1.1.7</version>
+		</plugin>
   	</plugins>
   </build>
+  <reporting>
+  	<plugins>
+  		<plugin>
+			<groupId>org.pitest</groupId>
+			<artifactId>pitest-maven</artifactId>
+			<version>1.1.7</version>
+		</plugin>
+  	</plugins>
+  </reporting>
 </project>
